# firestore-connector

./: .gitignore  README.md  __init__.py  examples.py  generate_setup.py.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: settings.yml
.github/workflows/: auto-release-tag.yml
dealroom_firestore_connector/: __init__.py  batch.py  helpers.py  status_codes.py
tests/: test_all.py  test_utils.py
