[tool.poetry]
name = "data-firestore-connector"
version = "1.0.17"
description = "A wrapper class for accessing Google Cloud Firestore based on our business logic"
authors = ["Data team <data@dealroom.co>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-firestore = "^2.0.2"
dealroom-urlextract = {git = "https://github.com/dealroom/data-urlextract", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
