[tool.poetry]
name = "dealroom-firestore-connector"
version = "1.0.21"
description = "A wrapper class for accessing Google Cloud Firestore based on our business logic"
authors = ["Dealroom.co <data@dealroom.co>"]
readme = "README.md"
repository = "https://github.com/dealroom/data-firestore-connector"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-firestore = "^2.0.2"
dealroom-urlextract = {git = "https://github.com/dealroom/data-urlextract", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
